# DataEngineer-FinancialData

./: .gitignore  README.md  http_cache.sqlite  main.py  pyproject.toml
ExploracaoInicial/: exp.ipynb  exp_crypto.ipynb  exp_stocks.ipynb  funcoes_exp.py  stocks.py  testes_funcoes.ipynb
ExploracaoInicial/Mercado_Financeiro/: toDo
ExploracaoInicial/Mercado_Financeiro/ACOES/: exp_acao.ipynb  teste.py
ExploracaoInicial/Mercado_Financeiro/ACOES/auxiliares/: get_fast_info
modulos/: objetos_investing.py  search_quotes.py
